--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+<head>
   {% include head.html %}
- {% if page.use_math %}   
- {% include mathjax_support.html %}
-{% endif %}
+
+</head>
   <body>
 
     {% include header.html %}
